[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-heap-memory"
version = "0.1.0"
description = "Compact local-first semantic memory for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Semantic Heap Contributors"}]
dependencies = []

[project.scripts]
semantic-heap = "semantic_heap.cli:main"

[tool.setuptools]
packages = ["semantic_heap"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
